# mordecai3

./: .gitignore  DEV.md  LICENSE  README.md  batch_process.py  compose.yaml  data_utilities.py  elastic_utilities.py  error_analysis.py  format_geoparsing_data.py  geo_linker.py  parallel_geoparse.py  production.py  pyproject.toml  requirements.txt  roberta_qa.py  setup.py  torch_bert_country_embedding.py  torch_bert_country_embedding_compare.py  torch_bert_country_embedding_compare_list.py  torch_bert_placename_compare.py
.github/workflows/: ci.yml  test-with-es.yml
assets/: country_bert_768.npy  mordecai2.pt
data/: feature_code_dict.json  mordecai2.pt  wikipedia-iso-country-codes.txt
eval/: error_utils.py
examples/: README.md  batch_process.py  batch_process_production.py  config.ini  production.py  production_event.py  pytorch_streamlit.py
mordecai3/: __init__.py  elastic_utilities.py  elasticsearch.py  error_analysis.py  error_utils.py  exceptions.py  geonames.py  geoparse.py  logging.py  mordecai_streamlit.py  mordecai_utilities.py  roberta_qa.py  torch_model.py  train.py  utilities.py  utils.py
mordecai3/assets/: admin1CodesASCII.txt  mordecai_2023-02-07_good.pt  mordecai_2023-03-28.pt  mordecai_2024-06-04.pt  mordecai_2025-08-27.pt
mordecai3/tests/: conftest.py  test_mordecai3.py
paper/: acl2021.sty  mordecai3_paper.fdb_latexmk  mordecai3_paper.fls  mordecai3_paper.tex
raw_data/: README.txt
tests/: conftest.py  test_dummy.py  test_elastic_utilities.py  test_elasticsearch.py  test_geonames.py  test_geoparser.py  test_mordecai3.py  test_startup_checks.py
tests/es_data/geonames_index/nodes/0/indices/3ra2puFVSk233AzIULQ9pA/0/index/: segments_3
tests/es_data/geonames_index/nodes/0/indices/VInfLsk6TXG8DKo9Aw71PQ/0/index/: segments_3
tests/es_data/geonames_index/nodes/0/indices/VInfLsk6TXG8DKo9Aw71PQ/0/translog/: translog-3.tlog  translog-4.tlog  translog.ckp
tools/: README.md  create_nl_es_geonames_index.sh  download-raw-es-test-data.sh  error_analysis.py  geonames_elasticsearch_loader.py  load-es-test-data.ps1  load-es-test-data.sh  train.py
tools/data/: NL.txt  admin1CodesASCII.txt  admin2Codes.txt  geonames_mapping.json
