[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mordecai3"
version = "3.3.1"
description = "Full text geoparsing/toponym resolution with event geolocation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["geoparsing", "nlp", "geocoding", "toponym resolution"]
authors = [
    {name = "Andy Halterman", email = "ahalterman0@gmail.com"}
]
dependencies = [
    "elasticsearch-dsl>=7.3.0,<8.0",
    "elasticsearch>=7.11.0,<8.0",
    "jellyfish>=0.8.2,<2.0",
    "jsonlines>=3.0.0,<4.0",
    "numpy>=1.19.5,<2.0",
    "pandas>=1.2.2,<2.0",
    "scikit-learn>=0.24.1",
    "spacy-transformers>=1.0.1,<2.0",
    "spacy>=3.5,<4.0",
    "torch>=1.2.0,<2.0",
    "tqdm>=4.56.1,<5.0",
    "transformers>=4.2.2,<5.0",
    "typer>=0.3.2,<1.0",
    "xmltodict>=0.12.0,<1.0"
]

[project.urls]
Homepage = "http://github.com/ahalterman/mordecai3/"
Repository = "https://github.com/ahalterman/mordecai3.git"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
mordecai3 = [
    "assets/admin1CodesASCII.txt",
    "assets/country_bert_768.npy",
    "assets/countryInfo.txt",
    "assets/feature_code_dict.json",
    "assets/hierarchy.txt",
    "assets/mordecai_2023-03-28.pt",
    "assets/mordecai_2024-06-04.pt",
    "assets/wikipedia-iso-country-codes.txt"
]
